src/specification/markdown/snapshots/duvet__specification__markdown__tests__multiple__tokens.snap
---
source: src/specification/markdown/tests.rs
expression: "super::tokens(r#\"\n# This is a test\n\nContent goes here. Another\nsentence here.\n\n## This is another test\n\nMore content goes here\n\n### Nested section\n\nTesting 123\n\n## Up one\n\nAnother section\n\"#)"
---
[
    Line(
        Str {
            value: "",
            pos: 0,
            line: 1,
        },
    ),
    Header {
        line: Str {
            value: "# This is a test",
            pos: 1,
            line: 2,
        },
        name: Str {
            value: "This is a test",
            pos: 3,
            line: 2,
        },
        fragment: None,
        level: 1,
    },
    Line(
        Str {
            value: "",
            pos: 18,
            line: 3,
        },
    ),
    Line(
        Str {
            value: "Content goes here. Another",
            pos: 19,
            line: 4,
        },
    ),
    Line(
        Str {
            value: "sentence here.",
            pos: 46,
            line: 5,
        },
    ),
    Line(
        Str {
            value: "",
            pos: 61,
            line: 6,
        },
    ),
    Header {
        line: Str {
            value: "## This is another test",
            pos: 62,
            line: 7,
        },
        name: Str {
            value: "This is another test",
            pos: 65,
            line: 7,
        },
        fragment: None,
        level: 2,
    },
    Line(
        Str {
            value: "",
            pos: 86,
            line: 8,
        },
    ),
    Line(
        Str {
            value: "More content goes here",
            pos: 87,
            line: 9,
        },
    ),
    Line(
        Str {
            value: "",
            pos: 110,
            line: 10,
        },
    ),
    Header {
        line: Str {
            value: "### Nested section",
            pos: 111,
            line: 11,
        },
        name: Str {
            value: "Nested section",
            pos: 115,
            line: 11,
        },
        fragment: None,
        level: 3,
    },
    Line(
        Str {
            value: "",
            pos: 130,
            line: 12,
        },
    ),
    Line(
        Str {
            value: "Testing 123",
            pos: 131,
            line: 13,
        },
    ),
    Line(
        Str {
            value: "",
            pos: 143,
            line: 14,
        },
    ),
    Header {
        line: Str {
            value: "## Up one",
            pos: 144,
            line: 15,
        },
        name: Str {
            value: "Up one",
            pos: 147,
            line: 15,
        },
        fragment: None,
        level: 2,
    },
    Line(
        Str {
            value: "",
            pos: 154,
            line: 16,
        },
    ),
    Line(
        Str {
            value: "Another section",
            pos: 155,
            line: 17,
        },
    ),
]
