src/specification/markdown/snapshots/duvet__specification__markdown__tests__multiple__tree.snap
---
source: src/specification/markdown/tests.rs
expression: "super::parse(r#\"\n# This is a test\n\nContent goes here. Another\nsentence here.\n\n## This is another test\n\nMore content goes here\n\n### Nested section\n\nTesting 123\n\n## Up one\n\nAnother section\n\"#)"
---
Ok(
    Specification {
        title: Some(
            "This is a test",
        ),
        sections: [
            Section {
                id: "this-is-a-test",
                title: "This is a test",
                full_title: Str {
                    value: "# This is a test",
                    pos: 1,
                    line: 2,
                },
                lines: [
                    Str(
                        Str {
                            value: "Content goes here. Another",
                            pos: 19,
                            line: 4,
                        },
                    ),
                    Str(
                        Str {
                            value: "sentence here.",
                            pos: 46,
                            line: 5,
                        },
                    ),
                    Str(
                        Str {
                            value: "",
                            pos: 61,
                            line: 6,
                        },
                    ),
                ],
            },
            Section {
                id: "this-is-another-test",
                title: "This is another test",
                full_title: Str {
                    value: "## This is another test",
                    pos: 62,
                    line: 7,
                },
                lines: [
                    Str(
                        Str {
                            value: "More content goes here",
                            pos: 87,
                            line: 9,
                        },
                    ),
                    Str(
                        Str {
                            value: "",
                            pos: 110,
                            line: 10,
                        },
                    ),
                ],
            },
            Section {
                id: "nested-section",
                title: "Nested section",
                full_title: Str {
                    value: "### Nested section",
                    pos: 111,
                    line: 11,
                },
                lines: [
                    Str(
                        Str {
                            value: "Testing 123",
                            pos: 131,
                            line: 13,
                        },
                    ),
                    Str(
                        Str {
                            value: "",
                            pos: 143,
                            line: 14,
                        },
                    ),
                ],
            },
            Section {
                id: "up-one",
                title: "Up one",
                full_title: Str {
                    value: "## Up one",
                    pos: 144,
                    line: 15,
                },
                lines: [
                    Str(
                        Str {
                            value: "Another section",
                            pos: 155,
                            line: 17,
                        },
                    ),
                ],
            },
        ],
        format: Markdown,
    },
)
